<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example.starter</groupId>
    <artifactId>mconfig-jpms-maven</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mconfig.version>0.8.1</mconfig.version>
        <logback.version>1.4.14</logback.version>
        <exec.maven.plugin.version>3.1.0</exec.maven.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.metabit.platform.support.config</groupId>
            <artifactId>mconfigbase</artifactId>
            <version>${mconfig.version}</version>
        </dependency>
        <dependency>
            <groupId>org.metabit.platform.support.config</groupId>
            <artifactId>mconfigloggingslf4j</artifactId>
            <version>${mconfig.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>ALL-MODULE-PATH</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec.maven.plugin.version}</version>
                <configuration>
                    <mainClass>com.example.starter.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>